# openrelik-worker-dfindexeddb

./: Dockerfile  README.md  openrelik.yaml  pyproject.toml
.github/workflows/: python-test.yaml
src/: indexeddb.py  leveldb.py
tests/: leveldb.py  test_indexeddb.py  test_leveldb.py
